# flashalpha-historical-python

./: .gitignore  AGENTS.md  README.md  llms.txt  pyproject.toml
examples/: 01_single_snapshot.py  02_daily_vrp_backtest.py  03_intraday_gamma_flip.py  04_max_pain_pin_study.py  getting_started.ipynb
src/flashalpha_historical/: __init__.py  client.py  exceptions.py  replay.py  types.py
tests/: test_client.py  test_integration.py  test_replay.py
